tests/errors/16_do_limit_type_error.f
      PROGRAM DO_LIMIT_TYPE_ERROR
      INTEGER I
      DO 10 I = 1, 'A'
   10 CONTINUE
      END
